--- a/app/views/status.html
+++ b/app/views/status.html
@@ -1,7 +1,8 @@
 <div ng-controller="ServerStatusController">
-    <div class="server-down" ng-show="isDown">
-    </div>
-    <div class="alert alert-danger" ng-show="isDown" role="alert">Server might be offline. Please check your server
-        status.
-    </div>
+  <div class="server-down" ng-show="isDown">
+  </div>
+  <div class="alert alert-danger" ng-show="isDown" role="alert">Server might be offline. Please check your server
+    status, Retrying in ({{counter}}) secs.
+    <a href="javascript:void(0)" style="color: white" ng-click="retry()">Retry now</a>
+  </div>
 </div>
