Changed test in message server status

--- a/app/views/status.html
+++ b/app/views/status.html
@@ -2,7 +2,7 @@
   <div class="server-down" ng-show="isDown">
   </div>
   <div class="alert alert-danger" ng-show="isDown" role="alert">Server might be offline. Please check your server
-    status, Retrying in ({{counter}}) secs.
+    status. Retrying in ({{counter}}) secs.
     <a href="javascript:void(0)" style="color: white" ng-click="retry()">Retry now</a>
   </div>
 </div>
