Ported Login + Browse

--- a/src/views/database/browse.html
+++ b/src/views/database/browse.html
@@ -36,11 +36,11 @@
             class="btn btn-trasparent btn-sm"
             data-placement="bottom"
             data-title="Query configuration"
-            data-template="views/database/browseConfig.html"
+            data-template-url="views/database/browseConfig.html"
             bs-popover
             data-toggle="dropdown"
             href="javascript:void(0)">
-            <i class="icon-wrench"></i>
+            <i class="fa fa-wrench"></i>
             <b class="caret"></b>
           </a>
         </div>
@@ -51,7 +51,7 @@
         <a class="" href="javascript:void(0)"
            data-placement="bottom"
            data-title="{{'browse.addBookmark' | translate}}"
-           data-template="views/database/bookmark.html"
+           data-template-url="views/database/bookmark.html"
            bs-popover
            data-animation="am-fade-and-scale">
           <i data-title="{{'browse.addBookmark' | translate}}" data-animation="am-fade-and-scale"
@@ -71,7 +71,7 @@
                  data-trigger="focus" data-placement="bottom-left"
                  data-animation="am-flip-x"
                  data-container="body"
-                 data-template="views/hints/query-hint.html" bs-popover>
+                 data-template-url="views/hints/query-hint.html" bs-popover>
                 <i class="fa fa-question-circle"></i>
               </a>
             </div>
