--- a/src/views/database/query.html
+++ b/src/views/database/query.html
@@ -21,7 +21,7 @@
       <div class="btn-group">
         <a class="" href="javascript:void(0)" data-placement="bottom"
            data-title="Add bookmark"
-           data-template="views/database/bookmark.html"
+           data-template-url="views/database/bookmark.html"
            bs-popover>
           <i data-title="Add to bookmarks"
              data-placement="top-right"
