--- a/src/views/database/newDatabase.html
+++ b/src/views/database/newDatabase.html
@@ -1,4 +1,4 @@
-<div class="modal" >
+<div class="modal">
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
@@ -14,7 +14,7 @@
 
               <div class="col-md-10">
                 <input type="text" class="form-control" required ng-model="name"
-                       placeholder="Database name" focus="true" />
+                       placeholder="Database name" focus="true"/>
               </div>
             </div>
             <div class="form-group">
@@ -74,11 +74,7 @@
 
           </fieldset>
         </form>
-        <!--<div>-->
-          <!--You can find the server credentials in $ORIENTDB_HOME/config/orientdb-server-config.xml file:-->
-                    <!--<pre>&lt;users&gt;<br/>&nbsp;&nbsp;&lt;user name="root" password="pwd" resources="*" /&gt;<br/>&lt;/users&gt;-->
-                    <!--</pre>-->
-        <!--</div>-->
+
         <div class="progress progress-striped active" ng-show="creating">
           <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0"
                aria-valuemax="100" style="width: 100%">
@@ -92,7 +88,8 @@
       </div>
       <div class="modal-footer">
         <button type="button" class="btn" ng-click="$hide()">Close</button>
-        <button class="btn btn-primary" ng-disabled="!sso && newDB.$invalid" ng-click="createNew()">Create database
+        <button class="btn btn-primary" ng-disabled="!sso && newDB.$invalid"
+                ng-click="createNew(name, type, stype, username, password, lightweight)">Create database
         </button>
       </div>
     </div>
