Schema + Security Migrated

--- a/src/views/database/editDocument.html
+++ b/src/views/database/editDocument.html
@@ -7,7 +7,7 @@
             <div class="panel-heading">
                 Links <a href="javascript:void(0)" ng-controller="DocumentPopoverLinkController"
                          data-placement="bottom" data-title="Add Link"
-                         data-template="views/document/addLink.html" bs-popover><i class="fa fa-plus-square"></i></a>
+                         data-template-url="views/document/addLink.html" bs-popover><i class="fa fa-plus-square"></i></a>
             </div>
             <div class="panel-body">
                 <form>
