--- a/src/views/database/modalEdit.html
+++ b/src/views/database/modalEdit.html
@@ -12,7 +12,7 @@
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-sm pull-left" data-placement="right"
-                        data-template="views/database/newFieldPopOver.html" bs-popover>Add Field
+                        data-template-url="views/database/newFieldPopOver.html" bs-popover>Add Field
                 </button>
                 <button type="button" class="btn btn-sm" ng-click="$hide()">Close</button>
                 <button class="btn btn-primary btn-sm" ng-click="modal.saved=true;$hide();save()">Save changes</button>
