Graph + Functions Migration Completed

--- a/src/views/database/graph/graph.html
+++ b/src/views/database/graph/graph.html
@@ -175,7 +175,7 @@
                         <div class="query-hint-mobile">
                           <a class="btn btn-trasparent ng-scope" tabindex="1" data-trigger="focus"
                              data-placement="bottom-left" data-animation="am-flip-x" data-container="body"
-                             data-template="views/hints/query-hint.html" bs-popover="">
+                             data-template-url="views/hints/query-hint.html" bs-popover="">
                             <i class="fa fa-question-circle"></i>
                           </a>
                         </div>
