Added Teleporter button in the login page.

--- a/src/views/login.html
+++ b/src/views/login.html
@@ -29,8 +29,8 @@
                                 <a class="btn btn-warning btn-sm ee-disabled"
                                    ng-class="{disabled: !isEE}" ng-click="goToTeleporter()"
                                    data-placement="top"
-                                   data-content="{{ hint | translate }}"
-                                   data-trigger="hover" data-delay="100,3000"
+                                   data-content="{{ importHint | translate }}"
+                                   data-trigger="hover" data-delay="100,2000"
                                    data-animation="am-fade-and-scale" data-container="body"
                                    bs-popover> <i class="fa fa-database">
                                    </i>
